# LogPose

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  solution_installation.md
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
docker/: docker-compose.yml
docs/consumers/: README.md
docs/dashboard/: logpose-dashboard-guide.md
docs/enrichers/: README.md
docs/forwarder/: README.md
docs/metrics/: README.md
docs/models/: README.md
docs/queue/: README.md
docs/routing/: README.md
docs/runbooks/: README.md
docs/web-ui/: rabbitmq-management-ui.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
logpose/: dashboard_main.py  forwarder_main.py  router_main.py
logpose/consumers/: __init__.py  base.py  kafka_consumer.py  pubsub_consumer.py  splunk_es_consumer.py  sqs_consumer.py  universal_consumer.py
logpose/dashboard/: app.py  metrics_consumer.py  metrics_store.py  rabbitmq_api.py  routes_reader.py
logpose/enrichers/: __init__.py  cache.py  context.py  principal.py  protocol.py  runner.py
logpose/forwarder/: __init__.py  dlq_forwarder.py  enriched_forwarder.py  splunk_client.py  universal_client.py
logpose/metrics/: emitter.py
logpose/models/: __init__.py  alert.py  enriched_alert.py
logpose/queue/: __init__.py  queues.py  rabbitmq.py  rabbitmq_consumer.py
logpose/routing/: __init__.py  registry.py  router.py
logpose/runbooks/: base.py  test_runbook.py
tests/integration/: conftest.py  test_cloudtrail_runbook_pipeline.py  test_kafka_ingestion.py  test_pubsub_ingestion.py  test_routing_flow.py  test_sns_ingestion.py  test_splunk_forwarding.py  test_sqs_ingestion.py  test_universal_ingestion.py
tests/unit/: test_alert_model.py  test_cloudtrail_runbook.py  test_cloudtrail_runbook_metrics.py  test_dlq_forwarder.py  test_enriched_alert.py  test_enriched_forwarder.py  test_gcp_event_audit_runbook.py  test_metrics_store.py  test_rabbitmq.py  test_rabbitmq_api.py  test_rabbitmq_consumer.py  test_route_matchers.py  test_route_registry.py  test_router.py  test_splunk_client.py  (+4 more)
(+46 files in other folders)
