[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logpose"
version = "0.1.0"
description = "Headless SOAR platform - ingestion layer"
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka>=2.3",
    "pika>=1.3",
    "boto3>=1.34",
    "google-cloud-pubsub>=2.21",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.9",
    "flake8>=7.0",
    "black>=24.0",
    "types-pika>=1.2",
    "boto3-stubs[sqs,sns]>=1.34",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["logpose*"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: marks tests as integration tests (require Docker Compose services)",
]
