[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpose"
version = "0.1.0"
description = "Headless Security Orchestration Automation and Response platform for OpenShift"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "LogPose Contributors"}]
license = {text = "MIT"}
keywords = ["soar", "security", "orchestration", "kafka", "rabbitmq"]

dependencies = [
    "pika>=1.3.1",           # RabbitMQ client
    "kafka-python>=2.0.2",   # Kafka consumer
    "boto3>=1.28.0",         # AWS SNS
    "google-cloud-pubsub>=2.18.0",  # GCP Pub/Sub
    "pydantic>=2.0.0",       # Data validation
    "pytest>=7.4.0",         # Testing
    "pytest-asyncio>=0.21.0",  # Async test support
    "python-dotenv>=1.0.0",  # Environment variables
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "flake8>=6.0.0",
    "black>=23.9.0",
    "ruff>=0.10.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
